I think the white space below the grid is actually fixed now

--- a/The-Lady-Barber-2.0/styles.css
+++ b/The-Lady-Barber-2.0/styles.css
@@ -51,6 +51,7 @@ hr { border: 1px solid #DDDDDD; }
     width: 100%; 
     height: 100%;
     object-fit: contain;
+    display: block;
 }
 
 #thumbnail-container { gap: 0.4rem; overflow-x: auto; scroll-behavior: smooth; padding: 0.3rem 0; background-color: var(--quarternary-color); }
@@ -148,8 +149,9 @@ hr { border: 1px solid #DDDDDD; }
 
 .gallery-widget-grid {
     display: grid;
-    grid-template-columns: auto;
+    /* grid-template-columns: auto; */
     margin: auto;
+    border: 1px solid red;
 }
 
 .gallery-widget-layer { 
